2004-06-30  Luke Gorrie  <luke@bluetail.com>

	* NEWS: Wrote preliminary release notes for alpha-1.

2004-06-29  Luke Gorrie  <luke@bluetail.com>

	* mkdist.sh: New shell script for creating a tarball for
	distribution.

2004-06-29  Bill Clementson  <Bill_Clementson@peoplesoft.com>

	* slime.el (slime-who-map): Add extra bindings for the XREF
	commands as with the documentation commands. Now `C-c C-w C-c' is
	`slime-who-calls' in addition to `C-c C-w c', etc.

2004-06-29  Luke Gorrie  <luke@bluetail.com>

	* slime.el (sldb-prune-initial-frames): Tweaked regexp for
	matching SWANK's own stack frames for effectiveness in SBCL.
	(slime-keys): Shadow remaining inf-lisp keys (C-c C-a, C-c C-v)
	with a null `slime-nop' command until we put them to a real use.

	* swank.lisp (open-streams): Renamed the restart around reads from
	the user-input stream from ABORT to ABORT-READ. Invoking this
	restart seems kinda dangerous, so better for 'a' in SLDB not to do
	so.

2004-06-28  Thomas F. Burdick  <tfb@OCF.Berkeley.EDU>

	* swank.lisp (inspector-nth-part):
	* slime.el (slime-inspector-copy-down, slime-inspector-mode-map):
	Added copy-down command (M-RET) to easily move an object from the
	inspector to the repl.

2004-06-28  Luke Gorrie  <luke@bluetail.com>

	* slime.el (slime-doc-map): New keymap for documentation
	commands. These all use the `C-c C-d' prefix, followed by:
	  a - apropos
	  p - apropos-package
	  z - apropos-all
	  d - describe-symbol
	  f - describe-function
	  h - hyperspec lookup
	  ~ - hyperspec lookup of a format character
	The final keystroke is bound both unmodified and with control, so
	both `C-c C-d a' and `C-c C-d C-a' will make an apropos
	search. The exception is hyperspec-lookup, because it's nice to
	leave C-h unbound so that `C-c C-d C-h' will summarise the
	documentation bindings.

2004-06-28  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* swank-allegro.lisp (nth-frame): Skip frames where
	frame-visible-p is false.
